--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,7 @@ run/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+# resources
+src/main/resources/assets/spoornpink/
+
