--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.1'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
+    api group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
+    api group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.1'
+    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
 }
 
 processResources {
