--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    api group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
-    api group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.1'
-    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
+    include implementation('com.fasterxml.jackson.core:jackson-core:2.13.1')
+    include implementation('com.fasterxml.jackson.core:jackson-annotations:2.13.1')
+    include implementation('com.fasterxml.jackson.core:jackson-databind:2.13.1')
 }
 
 processResources {
