--- a/build.gradle
+++ b/build.gradle
@@ -89,3 +89,7 @@ publishing {
         // retrieving dependencies.
     }
 }
+
+loom {
+    accessWidenerPath = file("src/main/resources/spoornpacks.accesswidener")
+}
