--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.22
-loader_version=0.13.1
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.1
+loader_version=0.13.3
 # Mod Properties
-mod_version=3.5
+mod_version=4.0+1.18.2
 maven_group=org.spoorn
 archives_base_name=spoornpacks
 
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.46.4+1.18
+fabric_version=0.47.8+1.18.2
