--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.14
+minecraft_version=1.20.1
+
+fabric_loader_version=0.14.21
+fabric_api_version=0.84.0+1.20.1
+yarn_mappings=1.20.1+build.9
+
 # Mod Properties
-mod_version=4.4-1.19.3
+mod_version=5.0-1.20.1
 maven_group=org.spoorn
 archives_base_name=spoornpacks
-
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.73.2+1.19.3
